qt/gen_qgesture.h

typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QGesture QGesture;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPanGesture QPanGesture;
typedef struct QPinchGesture QPinchGesture;
typedef struct QPointF QPointF;
typedef struct QTimerEvent QTimerEvent;
QGesture* QGesture_new();
QGesture* QGesture_new2(QObject* parent);
QMetaObject* QGesture_metaObject(const QGesture* self);
void* QGesture_metacast(QGesture* self, const char* param1);
int QGesture_metacall(QGesture* self, int param1, int param2, void** param3);
struct miqt_string QGesture_tr(const char* s);
struct miqt_string QGesture_trUtf8(const char* s);
int QGesture_gestureType(const QGesture* self);
int QGesture_state(const QGesture* self);
QPointF* QGesture_hotSpot(const QGesture* self);
void QGesture_setHotSpot(QGesture* self, QPointF* value);
bool QGesture_hasHotSpot(const QGesture* self);
void QGesture_unsetHotSpot(QGesture* self);
void QGesture_setGestureCancelPolicy(QGesture* self, int policy);
int QGesture_gestureCancelPolicy(const QGesture* self);
struct miqt_string QGesture_tr2(const char* s, const char* c);
struct miqt_string QGesture_tr3(const char* s, const char* c, int n);
struct miqt_string QGesture_trUtf82(const char* s, const char* c);
struct miqt_string QGesture_trUtf83(const char* s, const char* c, int n);
bool QGesture_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QGesture_virtualbase_metaObject(const void* self);
bool QGesture_override_virtual_metacast(void* self, intptr_t slot);
void* QGesture_virtualbase_metacast(void* self, const char* param1);
bool QGesture_override_virtual_metacall(void* self, intptr_t slot);
int QGesture_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QGesture_override_virtual_event(void* self, intptr_t slot);
bool QGesture_virtualbase_event(void* self, QEvent* event);
bool QGesture_override_virtual_eventFilter(void* self, intptr_t slot);
bool QGesture_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QGesture_override_virtual_timerEvent(void* self, intptr_t slot);
void QGesture_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QGesture_override_virtual_childEvent(void* self, intptr_t slot);
void QGesture_virtualbase_childEvent(void* self, QChildEvent* event);
bool QGesture_override_virtual_customEvent(void* self, intptr_t slot);
void QGesture_virtualbase_customEvent(void* self, QEvent* event);
bool QGesture_override_virtual_connectNotify(void* self, intptr_t slot);
void QGesture_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGesture_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGesture_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QGesture_staticMetaObject();
void QGesture_delete(QGesture* self);
QPanGesture* QPanGesture_new();
QPanGesture* QPanGesture_new2(QObject* parent);
QMetaObject* QPanGesture_metaObject(const QPanGesture* self);
void* QPanGesture_metacast(QPanGesture* self, const char* param1);
int QPanGesture_metacall(QPanGesture* self, int param1, int param2, void** param3);
struct miqt_string QPanGesture_tr(const char* s);
struct miqt_string QPanGesture_trUtf8(const char* s);
QPointF* QPanGesture_lastOffset(const QPanGesture* self);
QPointF* QPanGesture_offset(const QPanGesture* self);
QPointF* QPanGesture_delta(const QPanGesture* self);
double QPanGesture_acceleration(const QPanGesture* self);
void QPanGesture_setLastOffset(QPanGesture* self, QPointF* value);
void QPanGesture_setOffset(QPanGesture* self, QPointF* value);
void QPanGesture_setAcceleration(QPanGesture* self, double value);
struct miqt_string QPanGesture_tr2(const char* s, const char* c);
struct miqt_string QPanGesture_tr3(const char* s, const char* c, int n);
struct miqt_string QPanGesture_trUtf82(const char* s, const char* c);
struct miqt_string QPanGesture_trUtf83(const char* s, const char* c, int n);
bool QPanGesture_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QPanGesture_virtualbase_metaObject(const void* self);
bool QPanGesture_override_virtual_metacast(void* self, intptr_t slot);
void* QPanGesture_virtualbase_metacast(void* self, const char* param1);
bool QPanGesture_override_virtual_metacall(void* self, intptr_t slot);
int QPanGesture_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QPanGesture_override_virtual_event(void* self, intptr_t slot);
bool QPanGesture_virtualbase_event(void* self, QEvent* event);
bool QPanGesture_override_virtual_eventFilter(void* self, intptr_t slot);
bool QPanGesture_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QPanGesture_override_virtual_timerEvent(void* self, intptr_t slot);
void QPanGesture_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QPanGesture_override_virtual_childEvent(void* self, intptr_t slot);
void QPanGesture_virtualbase_childEvent(void* self, QChildEvent* event);
bool QPanGesture_override_virtual_customEvent(void* self, intptr_t slot);
void QPanGesture_virtualbase_customEvent(void* self, QEvent* event);
bool QPanGesture_override_virtual_connectNotify(void* self, intptr_t slot);
void QPanGesture_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QPanGesture_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QPanGesture_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QPanGesture_staticMetaObject();
void QPanGesture_delete(QPanGesture* self);
QPinchGesture* QPinchGesture_new();
QPinchGesture* QPinchGesture_new2(QObject* parent);
QMetaObject* QPinchGesture_metaObject(const QPinchGesture* self);
void* QPinchGesture_metacast(QPinchGesture* self, const char* param1);
int QPinchGesture_metacall(QPinchGesture* self, int param1, int param2, void** param3);
struct miqt_string QPinchGesture_tr(const char* s);
struct miqt_string QPinchGesture_trUtf8(const char* s);
int QPinchGesture_totalChangeFlags(const QPinchGesture* self);
void QPinchGesture_setTotalChangeFlags(QPinchGesture* self, int value);
int QPinchGesture_changeFlags(const QPinchGesture* self);
void QPinchGesture_setChangeFlags(QPinchGesture* self, int value);
QPointF* QPinchGesture_startCenterPoint(const QPinchGesture* self);
QPointF* QPinchGesture_lastCenterPoint(const QPinchGesture* self);
QPointF* QPinchGesture_centerPoint(const QPinchGesture* self);
void QPinchGesture_setStartCenterPoint(QPinchGesture* self, QPointF* value);
void QPinchGesture_setLastCenterPoint(QPinchGesture* self, QPointF* value);
void QPinchGesture_setCenterPoint(QPinchGesture* self, QPointF* value);
double QPinchGesture_totalScaleFactor(const QPinchGesture* self);
double QPinchGesture_lastScaleFactor(const QPinchGesture* self);
double QPinchGesture_scaleFactor(const QPinchGesture* self);
void QPinchGesture_setTotalScaleFactor(QPinchGesture* self, double value);
void QPinchGesture_setLastScaleFactor(QPinchGesture* self, double value);
void QPinchGesture_setScaleFactor(QPinchGesture* self, double value);
double QPinchGesture_totalRotationAngle(const QPinchGesture* self);
double QPinchGesture_lastRotationAngle(const QPinchGesture* self);
double QPinchGesture_rotationAngle(const QPinchGesture* self);
void QPinchGesture_setTotalRotationAngle(QPinchGesture* self, double value);