qt/gen_qgesture.nim


proc fcQGesture_new(): ptr cQGesture {.importc: "QGesture_new".}
proc fcQGesture_new2(parent: pointer): ptr cQGesture {.importc: "QGesture_new2".}
proc fcQGesture_metaObject(self: pointer, ): pointer {.importc: "QGesture_metaObject".}
proc fcQGesture_metacast(self: pointer, param1: cstring): pointer {.importc: "QGesture_metacast".}
proc fcQGesture_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGesture_metacall".}
proc fcQGesture_tr(s: cstring): struct_miqt_string {.importc: "QGesture_tr".}
proc fcQGesture_trUtf8(s: cstring): struct_miqt_string {.importc: "QGesture_trUtf8".}
proc fcQGesture_gestureType(self: pointer, ): cint {.importc: "QGesture_gestureType".}
proc fcQGesture_state(self: pointer, ): cint {.importc: "QGesture_state".}
proc fcQGesture_hotSpot(self: pointer, ): pointer {.importc: "QGesture_hotSpot".}
proc fcQGesture_setHotSpot(self: pointer, value: pointer): void {.importc: "QGesture_setHotSpot".}
proc fcQGesture_hasHotSpot(self: pointer, ): bool {.importc: "QGesture_hasHotSpot".}
proc fcQGesture_unsetHotSpot(self: pointer, ): void {.importc: "QGesture_unsetHotSpot".}
proc fcQGesture_setGestureCancelPolicy(self: pointer, policy: cint): void {.importc: "QGesture_setGestureCancelPolicy".}
proc fcQGesture_gestureCancelPolicy(self: pointer, ): cint {.importc: "QGesture_gestureCancelPolicy".}
proc fcQGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QGesture_tr2".}
proc fcQGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGesture_tr3".}
proc fcQGesture_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QGesture_trUtf82".}
proc fcQGesture_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QGesture_trUtf83".}
proc fQGesture_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QGesture_virtualbase_metaObject".}
proc fcQGesture_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QGesture_override_virtual_metaObject".}
proc fQGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QGesture_virtualbase_metacast".}
proc fcQGesture_override_virtual_metacast(self: pointer, slot: int) {.importc: "QGesture_override_virtual_metacast".}
proc fQGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QGesture_virtualbase_metacall".}
proc fcQGesture_override_virtual_metacall(self: pointer, slot: int) {.importc: "QGesture_override_virtual_metacall".}
proc fQGesture_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QGesture_virtualbase_event".}
proc fcQGesture_override_virtual_event(self: pointer, slot: int) {.importc: "QGesture_override_virtual_event".}
proc fQGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QGesture_virtualbase_eventFilter".}
proc fcQGesture_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QGesture_override_virtual_eventFilter".}
proc fQGesture_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QGesture_virtualbase_timerEvent".}
proc fcQGesture_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QGesture_override_virtual_timerEvent".}
proc fQGesture_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QGesture_virtualbase_childEvent".}
proc fcQGesture_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QGesture_override_virtual_childEvent".}
proc fQGesture_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QGesture_virtualbase_customEvent".}
proc fcQGesture_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QGesture_override_virtual_customEvent".}
proc fQGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGesture_virtualbase_connectNotify".}
proc fcQGesture_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGesture_override_virtual_connectNotify".}
proc fQGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGesture_virtualbase_disconnectNotify".}
proc fcQGesture_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGesture_override_virtual_disconnectNotify".}
proc fcQGesture_staticMetaObject(): pointer {.importc: "QGesture_staticMetaObject".}
proc fcQGesture_delete(self: pointer) {.importc: "QGesture_delete".}
proc fcQPanGesture_new(): ptr cQPanGesture {.importc: "QPanGesture_new".}
proc fcQPanGesture_new2(parent: pointer): ptr cQPanGesture {.importc: "QPanGesture_new2".}
proc fcQPanGesture_metaObject(self: pointer, ): pointer {.importc: "QPanGesture_metaObject".}
proc fcQPanGesture_metacast(self: pointer, param1: cstring): pointer {.importc: "QPanGesture_metacast".}
proc fcQPanGesture_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QPanGesture_metacall".}
proc fcQPanGesture_tr(s: cstring): struct_miqt_string {.importc: "QPanGesture_tr".}
proc fcQPanGesture_trUtf8(s: cstring): struct_miqt_string {.importc: "QPanGesture_trUtf8".}
proc fcQPanGesture_lastOffset(self: pointer, ): pointer {.importc: "QPanGesture_lastOffset".}
proc fcQPanGesture_offset(self: pointer, ): pointer {.importc: "QPanGesture_offset".}
proc fcQPanGesture_delta(self: pointer, ): pointer {.importc: "QPanGesture_delta".}
proc fcQPanGesture_acceleration(self: pointer, ): float64 {.importc: "QPanGesture_acceleration".}
proc fcQPanGesture_setLastOffset(self: pointer, value: pointer): void {.importc: "QPanGesture_setLastOffset".}
proc fcQPanGesture_setOffset(self: pointer, value: pointer): void {.importc: "QPanGesture_setOffset".}
proc fcQPanGesture_setAcceleration(self: pointer, value: float64): void {.importc: "QPanGesture_setAcceleration".}
proc fcQPanGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QPanGesture_tr2".}
proc fcQPanGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QPanGesture_tr3".}
proc fcQPanGesture_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QPanGesture_trUtf82".}
proc fcQPanGesture_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QPanGesture_trUtf83".}
proc fQPanGesture_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QPanGesture_virtualbase_metaObject".}
proc fcQPanGesture_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_metaObject".}
proc fQPanGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QPanGesture_virtualbase_metacast".}
proc fcQPanGesture_override_virtual_metacast(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_metacast".}
proc fQPanGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QPanGesture_virtualbase_metacall".}
proc fcQPanGesture_override_virtual_metacall(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_metacall".}
proc fQPanGesture_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QPanGesture_virtualbase_event".}
proc fcQPanGesture_override_virtual_event(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_event".}
proc fQPanGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QPanGesture_virtualbase_eventFilter".}
proc fcQPanGesture_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_eventFilter".}
proc fQPanGesture_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QPanGesture_virtualbase_timerEvent".}
proc fcQPanGesture_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_timerEvent".}
proc fQPanGesture_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QPanGesture_virtualbase_childEvent".}
proc fcQPanGesture_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_childEvent".}
proc fQPanGesture_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QPanGesture_virtualbase_customEvent".}
proc fcQPanGesture_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_customEvent".}
proc fQPanGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QPanGesture_virtualbase_connectNotify".}
proc fcQPanGesture_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_connectNotify".}
proc fQPanGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QPanGesture_virtualbase_disconnectNotify".}
proc fcQPanGesture_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QPanGesture_override_virtual_disconnectNotify".}
proc fcQPanGesture_staticMetaObject(): pointer {.importc: "QPanGesture_staticMetaObject".}
proc fcQPanGesture_delete(self: pointer) {.importc: "QPanGesture_delete".}
proc fcQPinchGesture_new(): ptr cQPinchGesture {.importc: "QPinchGesture_new".}
proc fcQPinchGesture_new2(parent: pointer): ptr cQPinchGesture {.importc: "QPinchGesture_new2".}
proc fcQPinchGesture_metaObject(self: pointer, ): pointer {.importc: "QPinchGesture_metaObject".}
proc fcQPinchGesture_metacast(self: pointer, param1: cstring): pointer {.importc: "QPinchGesture_metacast".}
proc fcQPinchGesture_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QPinchGesture_metacall".}
proc fcQPinchGesture_tr(s: cstring): struct_miqt_string {.importc: "QPinchGesture_tr".}
proc fcQPinchGesture_trUtf8(s: cstring): struct_miqt_string {.importc: "QPinchGesture_trUtf8".}
proc fcQPinchGesture_totalChangeFlags(self: pointer, ): cint {.importc: "QPinchGesture_totalChangeFlags".}
proc fcQPinchGesture_setTotalChangeFlags(self: pointer, value: cint): void {.importc: "QPinchGesture_setTotalChangeFlags".}
proc fcQPinchGesture_changeFlags(self: pointer, ): cint {.importc: "QPinchGesture_changeFlags".}
proc fcQPinchGesture_setChangeFlags(self: pointer, value: cint): void {.importc: "QPinchGesture_setChangeFlags".}
proc fcQPinchGesture_startCenterPoint(self: pointer, ): pointer {.importc: "QPinchGesture_startCenterPoint".}
proc fcQPinchGesture_lastCenterPoint(self: pointer, ): pointer {.importc: "QPinchGesture_lastCenterPoint".}
proc fcQPinchGesture_centerPoint(self: pointer, ): pointer {.importc: "QPinchGesture_centerPoint".}
proc fcQPinchGesture_setStartCenterPoint(self: pointer, value: pointer): void {.importc: "QPinchGesture_setStartCenterPoint".}
proc fcQPinchGesture_setLastCenterPoint(self: pointer, value: pointer): void {.importc: "QPinchGesture_setLastCenterPoint".}
proc fcQPinchGesture_setCenterPoint(self: pointer, value: pointer): void {.importc: "QPinchGesture_setCenterPoint".}
proc fcQPinchGesture_totalScaleFactor(self: pointer, ): float64 {.importc: "QPinchGesture_totalScaleFactor".}
proc fcQPinchGesture_lastScaleFactor(self: pointer, ): float64 {.importc: "QPinchGesture_lastScaleFactor".}
proc fcQPinchGesture_scaleFactor(self: pointer, ): float64 {.importc: "QPinchGesture_scaleFactor".}
proc fcQPinchGesture_setTotalScaleFactor(self: pointer, value: float64): void {.importc: "QPinchGesture_setTotalScaleFactor".}
proc fcQPinchGesture_setLastScaleFactor(self: pointer, value: float64): void {.importc: "QPinchGesture_setLastScaleFactor".}
proc fcQPinchGesture_setScaleFactor(self: pointer, value: float64): void {.importc: "QPinchGesture_setScaleFactor".}
proc fcQPinchGesture_totalRotationAngle(self: pointer, ): float64 {.importc: "QPinchGesture_totalRotationAngle".}
proc fcQPinchGesture_lastRotationAngle(self: pointer, ): float64 {.importc: "QPinchGesture_lastRotationAngle".}
proc fcQPinchGesture_rotationAngle(self: pointer, ): float64 {.importc: "QPinchGesture_rotationAngle".}
proc fcQPinchGesture_setTotalRotationAngle(self: pointer, value: float64): void {.importc: "QPinchGesture_setTotalRotationAngle".}
